fixes mobile spacing

--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -371,7 +371,7 @@ button.settings {
   background: #282878;
 }
 #views button {
-  width: 16.3%;
+  width: 15.3%;
   text-align: center;
   background: transparent;
   color: white;
@@ -394,7 +394,7 @@ button.settings {
   top: 0;
   left: 0;
   transition: 1s;
-  width: 95%;
+  width: 90%;
   background: #fff;
   box-shadow: 0 0 5px;
 }
